[gd_scene load_steps=36 format=3 uid="uid://cijp57po3nd0h"]

[ext_resource type="Script" path="res://Scripts/criminal.gd" id="1_18ar5"]
[ext_resource type="Script" path="res://Scripts/enemyaim.gd" id="2_d0cpg"]
[ext_resource type="Texture2D" uid="uid://wrtksxrctxey" path="res://Assets/Player_walking_animation.png" id="2_kk3vs"]
[ext_resource type="Script" path="res://Scripts/EnemyBullet.gd" id="3_vqipn"]
[ext_resource type="AudioStream" uid="uid://c7p4o1cmllkvy" path="res://Audio/9mm-pistol-shot-6349.mp3" id="4_kfvcg"]
[ext_resource type="AudioStream" uid="uid://c71jkj6qpoi7y" path="res://Audio/male_hurt7-48124.mp3" id="5_htufk"]
[ext_resource type="Script" path="res://Scripts/VisionLine.gd" id="6_7wire"]
[ext_resource type="Texture2D" uid="uid://dpdngv13g4jor" path="res://Assets/EnemyDeath.png" id="7_a8at2"]
[ext_resource type="AudioStream" uid="uid://cx8hgyhxyqju6" path="res://Audio/cut.mp3" id="9_kdmu1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y21y5"]
size = Vector2(715.969, 375.125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_prnbi"]
size = Vector2(2182, 1194)

[sub_resource type="CircleShape2D" id="CircleShape2D_t860l"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h8naw"]
radius = 3.16228

[sub_resource type="AtlasTexture" id="AtlasTexture_qsfpx"]
atlas = ExtResource("7_a8at2")
region = Rect2(0, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_crmun"]
atlas = ExtResource("7_a8at2")
region = Rect2(79, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckx2p"]
atlas = ExtResource("7_a8at2")
region = Rect2(0, 79, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4ypn"]
atlas = ExtResource("7_a8at2")
region = Rect2(79, 79, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_86aob"]
atlas = ExtResource("2_kk3vs")
region = Rect2(79, 79, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gjy8"]
atlas = ExtResource("2_kk3vs")
region = Rect2(79, 79, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg01p"]
atlas = ExtResource("2_kk3vs")
region = Rect2(158, 79, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_sysk1"]
atlas = ExtResource("2_kk3vs")
region = Rect2(237, 79, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_asojo"]
atlas = ExtResource("2_kk3vs")
region = Rect2(0, 158, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_jiwy6"]
atlas = ExtResource("2_kk3vs")
region = Rect2(79, 158, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_08mth"]
atlas = ExtResource("2_kk3vs")
region = Rect2(158, 158, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_4854t"]
atlas = ExtResource("2_kk3vs")
region = Rect2(237, 158, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_02msa"]
atlas = ExtResource("2_kk3vs")
region = Rect2(0, 237, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_paona"]
atlas = ExtResource("2_kk3vs")
region = Rect2(79, 237, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj0xf"]
atlas = ExtResource("2_kk3vs")
region = Rect2(158, 237, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_beos6"]
atlas = ExtResource("2_kk3vs")
region = Rect2(0, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca73n"]
atlas = ExtResource("2_kk3vs")
region = Rect2(79, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqrps"]
atlas = ExtResource("2_kk3vs")
region = Rect2(158, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubb8t"]
atlas = ExtResource("2_kk3vs")
region = Rect2(237, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_o11pg"]
atlas = ExtResource("2_kk3vs")
region = Rect2(0, 79, 79, 79)

[sub_resource type="SpriteFrames" id="SpriteFrames_pxa6k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsfpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crmun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckx2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ypn")
}],
"loop": false,
"name": &"death",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86aob")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gjy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg01p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sysk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asojo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jiwy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08mth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4854t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02msa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_paona")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj0xf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_beos6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca73n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqrps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubb8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o11pg")
}],
"loop": true,
"name": &"run",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rly2m"]
radius = 15.0

[node name="Criminal" type="CharacterBody2D" groups=["Enemy"]]
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_18ar5")

[node name="Hit2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_htufk")
volume_db = -6.891
pitch_scale = 1.47

[node name="Hit3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_htufk")
volume_db = 2.506
pitch_scale = 1.05

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource("RectangleShape2D_y21y5")

[node name="Sight2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight2"]
shape = SubResource("RectangleShape2D_prnbi")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t860l")

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = 4.71239
script = ExtResource("2_d0cpg")

[node name="EnemyBullet" type="Area2D" parent="RayCast2D"]
script = ExtResource("3_vqipn")

[node name="Gunshot" type="AudioStreamPlayer2D" parent="RayCast2D/EnemyBullet"]
rotation = 1.5708
stream = ExtResource("4_kfvcg")
volume_db = -7.622
pitch_scale = 1.67

[node name="Hit" type="AudioStreamPlayer2D" parent="RayCast2D/EnemyBullet"]
stream = ExtResource("5_htufk")
volume_db = 0.627
pitch_scale = 0.8

[node name="VisionLine" type="RayCast2D" parent="RayCast2D/EnemyBullet"]
target_position = Vector2(164, -0.000158358)
script = ExtResource("6_7wire")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCast2D/EnemyBullet"]
position = Vector2(9, 3.99999)
scale = Vector2(1.00593, 1.00182)
shape = SubResource("CircleShape2D_h8naw")

[node name="ColorRect" type="ColorRect" parent="RayCast2D/EnemyBullet"]
offset_left = 9.0
offset_top = 2.99999
offset_right = 18.0
offset_bottom = 3.99999
color = Color(1, 1, 0, 1)

[node name="Firerate" type="Timer" parent="RayCast2D/EnemyBullet"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="RayCast2D"]
texture_filter = 1
position = Vector2(-2.38419e-06, -2)
rotation = 1.5708
scale = Vector2(0.646825, 0.674513)
sprite_frames = SubResource("SpriteFrames_pxa6k")
animation = &"idle"

[node name="Attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
shape = SubResource("CircleShape2D_rly2m")

[node name="Blood" type="CPUParticles2D" parent="Attack"]
emitting = false
amount = 30
lifetime = 0.15
randomness = 1.0
emission_shape = 1
emission_sphere_radius = 5.2
direction = Vector2(180, 0)
spread = 88.78
gravity = Vector2(0, 0)
radial_accel_min = 52.7
radial_accel_max = 5000.0
damping_min = 18.373
damping_max = 18.373
scale_amount_min = 2.0
scale_amount_max = 2.0
color = Color(1, 0, 0, 1)

[node name="BloodTimer" type="Timer" parent="Attack/Blood"]
wait_time = 0.1

[node name="Cut" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_kdmu1")
volume_db = -5.754

[connection signal="dead2" from="." to="RayCast2D" method="_on_criminal_dead_2"]
[connection signal="dead2" from="." to="RayCast2D/EnemyBullet" method="_on_criminal_dead_2"]
[connection signal="body_entered" from="Sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="Sight2" to="." method="_on_sight_2_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="RayCast2D/EnemyBullet" to="RayCast2D/EnemyBullet" method="_on_body_entered"]
[connection signal="novision" from="RayCast2D/EnemyBullet/VisionLine" to="RayCast2D/EnemyBullet" method="_on_vision_line_novision"]
[connection signal="vision" from="RayCast2D/EnemyBullet/VisionLine" to="RayCast2D/EnemyBullet" method="_on_vision_line_vision"]
[connection signal="timeout" from="RayCast2D/EnemyBullet/Firerate" to="RayCast2D/EnemyBullet" method="_on_firerate_timeout"]
[connection signal="area_entered" from="Attack" to="." method="_on_attack_area_entered"]
[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
[connection signal="timeout" from="Attack/Blood/BloodTimer" to="." method="_on_blood_timer_timeout"]
